# agh-cpp

lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp  main.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab2/array2d/: Array2D.cpp  Array2D.h  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp
lab2/simpleforwardlist/: SimpleForwardList.cpp  SimpleForwardList.h  main.cpp
lab2/xorcypherbreaker/: XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab3/ccounter/: CCounter.cpp  CCounter.h  CMakeLists.txt  main.cpp
lab4/netsjson/: SimpleJson.cpp  SimpleJson.h  main.cpp
lab4/netstemplateengine/: CMakeLists.txt  SimpleTemplateEngine.cpp  SimpleTemplateEngine.h  main.cpp
lab5/memorychunk/: MemoryChunk.cpp  MemoryChunk.h  main.cpp
